--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
         <div class="left">
 
           <h1 class="h1">
-            Hi, I'm <b>Julia&nbsp;Walker</b>.
-            <br>Web Developer
+            Hi, I'm <b>Anupam&nbsp;</b>.
+            <br>SQL Developer
           </h1>
 
           <p class="h3">
-            Specialized in <abbr title="Accessibility">a11y</abbr>
-            and Core Web Vitals
+            Specialized in <abbr title="Accessibility">TURNING RAW DATA INTO ACTIONABLE INSIGHT </abbr>
+            📊
           </p>
 
           <div class="btn-group">
